trad3.output
Grammar

    0 $accept: axioma $end

    1 axioma: top_level_list funcion_main

    2 top_level_list: ε
    3               | top_level_list declaracion ';'
    4               | top_level_list funcion

    5 $@1: ε

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' '{' declaraciones_locales lista_sentencias '}'

    7 $@2: ε

    8 funcion: IDENTIF '(' $@2 parametros ')' '{' declaraciones_locales lista_sentencias '}'

    9 parametros: ε
   10           | lista_parametros

   11 lista_parametros: INTEGER IDENTIF
   12                 | IDENTIF
   13                 | lista_parametros ',' INTEGER IDENTIF
   14                 | lista_parametros ',' IDENTIF

   15 declaraciones_locales: ε
   16                      | declaraciones_locales declaracion_local ';'

   17 declaracion: INTEGER lista_vars

   18 declaracion_local: INTEGER lista_vars_locales

   19 lista_vars: vars
   20           | vars ',' lista_vars

   21 lista_vars_locales: vars_locales
   22                   | vars_locales ',' lista_vars_locales

   23 vars: IDENTIF
   24     | IDENTIF '=' cte
   25     | IDENTIF '[' cte ']'

   26 vars_locales: IDENTIF
   27             | IDENTIF '=' cte
   28             | IDENTIF '[' cte ']'

   29 cte: NUMBER
   30    | '+' NUMBER
   31    | '-' NUMBER

   32 $@3: ε

   33 funcion_main: INTEGER MAIN $@3 '(' ')' '{' declaraciones_locales lista_sentencias '}'

   34 $@4: ε

   35 funcion_main: MAIN $@4 '(' ')' '{' declaraciones_locales lista_sentencias '}'

   36 lista_sentencias: ε
   37                 | lista_sentencias sentencia ';'
   38                 | lista_sentencias sentencia_control

   39 lista_argumentos: argumento_printf
   40                 | argumento_printf ',' lista_argumentos

   41 argumento_printf: expresion
   42                 | STRING

   43 lista_expr: ε
   44           | expresion
   45           | expresion ',' lista_expr

   46 sentencia: IDENTIF '=' expresion
   47          | IDENTIF '[' expresion ']' '=' expresion
   48          | RETURN expresion
   49          | PUTS '(' STRING ')'
   50          | PRINTF '(' STRING ')'
   51          | PRINTF '(' STRING ',' lista_argumentos ')'
   52          | PRINTF '(' expresion ')'
   53          | IDENTIF '(' lista_expr ')'

   54 sentencia_control: WHILE '(' expresion ')' '{' lista_sentencias '}'
   55                  | IF '(' expresion ')' '{' lista_sentencias '}'
   56                  | IF '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
   57                  | FOR '(' for_init ';' expresion ';' for_step ')' '{' lista_sentencias '}'
   58                  | SWITCH '(' expresion ')' '{' lista_cases '}'

   59 for_init: declaracion
   60         | IDENTIF '=' expresion

   61 for_step: IDENTIF '(' IDENTIF ')'
   62         | IDENTIF '=' expresion

   63 lista_cases: case_block
   64            | lista_cases case_block

   65 case_block: CASE cte ':' lista_sentencias BREAK ';'
   66           | DEFAULT ':' lista_sentencias
   67           | DEFAULT ':' lista_sentencias BREAK ';'

   68 expresion: termino
   69          | expresion '+' expresion
   70          | expresion '-' expresion
   71          | expresion '*' expresion
   72          | expresion '/' expresion
   73          | expresion '%' expresion
   74          | expresion '>' expresion
   75          | expresion '<' expresion
   76          | expresion IGUAL expresion
   77          | expresion DIFERENTE expresion
   78          | expresion MAYOR_IGUAL expresion
   79          | expresion MENOR_IGUAL expresion
   80          | expresion AND expresion
   81          | expresion OR expresion
   82          | NOT expresion

   83 termino: operando
   84        | '+' operando
   85        | '-' operando

   86 operando: IDENTIF
   87         | NUMBER
   88         | IDENTIF '[' expresion ']'
   89         | IDENTIF '(' lista_expr ')'
   90         | '(' expresion ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 73
    '(' (40) 6 8 33 35 49 50 51 52 53 54 55 56 57 58 61 89 90
    ')' (41) 6 8 33 35 49 50 51 52 53 54 55 56 57 58 61 89 90
    '*' (42) 71
    '+' (43) 30 69 84
    ',' (44) 13 14 20 22 40 45 51
    '-' (45) 31 70 85
    '/' (47) 72
    ':' (58) 65 66 67
    ';' (59) 3 16 37 57 65 67
    '<' (60) 75
    '=' (61) 24 27 46 47 60 62
    '>' (62) 74
    '[' (91) 25 28 47 88
    ']' (93) 25 28 47 88
    '{' (123) 6 8 33 35 54 55 56 57 58
    '}' (125) 6 8 33 35 54 55 56 57 58
    error (256)
    NUMBER (258) 29 30 31 87
    IDENTIF (259) 6 8 11 12 13 14 23 24 25 26 27 28 46 47 53 60 61 62 86 88 89
    INTEGER (260) 6 11 13 17 18 33
    STRING (261) 42 49 50 51
    MAIN (262) 33 35
    WHILE (263) 54
    IF (264) 55 56
    ELSE (265) 56
    FOR (266) 57
    SWITCH (267) 58
    CASE (268) 65
    DEFAULT (269) 66 67
    BREAK (270) 65 67
    RETURN (271) 48
    PRINTF (272) 50 51 52
    PUTS (273) 49
    AND (274) 80
    OR (275) 81
    NOT (276) 82
    IGUAL (277) 76
    DIFERENTE (278) 77
    MENOR_IGUAL (279) 79
    MAYOR_IGUAL (280) 78
    UNARY_SIGN (281)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    axioma (45)
        on left: 1
        on right: 0
    top_level_list (46)
        on left: 2 3 4
        on right: 1 3 4
    funcion (47)
        on left: 6 8
        on right: 4
    $@1 (48)
        on left: 5
        on right: 6
    $@2 (49)
        on left: 7
        on right: 8
    parametros (50)
        on left: 9 10
        on right: 6 8
    lista_parametros (51)
        on left: 11 12 13 14
        on right: 10 13 14
    declaraciones_locales (52)
        on left: 15 16
        on right: 6 8 16 33 35
    declaracion (53)
        on left: 17
        on right: 3 59
    declaracion_local (54)
        on left: 18
        on right: 16
    lista_vars (55)
        on left: 19 20
        on right: 17 20
    lista_vars_locales (56)
        on left: 21 22
        on right: 18 22
    vars (57)
        on left: 23 24 25
        on right: 19 20
    vars_locales (58)
        on left: 26 27 28
        on right: 21 22
    cte (59)
        on left: 29 30 31
        on right: 24 25 27 28 65
    funcion_main (60)
        on left: 33 35
        on right: 1
    $@3 (61)
        on left: 32
        on right: 33
    $@4 (62)
        on left: 34
        on right: 35
    lista_sentencias (63)
        on left: 36 37 38
        on right: 6 8 33 35 37 38 54 55 56 57 65 66 67
    lista_argumentos (64)
        on left: 39 40
        on right: 40 51
    argumento_printf (65)
        on left: 41 42
        on right: 39 40
    lista_expr (66)
        on left: 43 44 45
        on right: 45 53 89
    sentencia (67)
        on left: 46 47 48 49 50 51 52 53
        on right: 37
    sentencia_control (68)
        on left: 54 55 56 57 58
        on right: 38
    for_init (69)
        on left: 59 60
        on right: 57
    for_step (70)
        on left: 61 62
        on right: 57
    lista_cases (71)
        on left: 63 64
        on right: 58 64
    case_block (72)
        on left: 65 66 67
        on right: 63 64
    expresion (73)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
        on right: 41 44 45 46 47 48 52 54 55 56 57 58 60 62 69 70 71 72 73 74 75 76 77 78 79 80 81 82 88 90
    termino (74)
        on left: 83 84 85
        on right: 68
    operando (75)
        on left: 86 87 88 89 90
        on right: 83 84 85


State 0

    0 $accept: • axioma $end

    $default  reduce using rule 2 (top_level_list)

    axioma          go to state 1
    top_level_list  go to state 2


State 1

    0 $accept: axioma • $end

    $end  shift, and go to state 3


State 2

    1 axioma: top_level_list • funcion_main
    3 top_level_list: top_level_list • declaracion ';'
    4               | top_level_list • funcion

    IDENTIF  shift, and go to state 4
    INTEGER  shift, and go to state 5
    MAIN     shift, and go to state 6

    funcion       go to state 7
    declaracion   go to state 8
    funcion_main  go to state 9


State 3

    0 $accept: axioma $end •

    $default  accept


State 4

    8 funcion: IDENTIF • '(' $@2 parametros ')' '{' declaraciones_locales lista_sentencias '}'

    '('  shift, and go to state 10


State 5

    6 funcion: INTEGER • IDENTIF '(' $@1 parametros ')' '{' declaraciones_locales lista_sentencias '}'
   17 declaracion: INTEGER • lista_vars
   33 funcion_main: INTEGER • MAIN $@3 '(' ')' '{' declaraciones_locales lista_sentencias '}'

    IDENTIF  shift, and go to state 11
    MAIN     shift, and go to state 12

    lista_vars  go to state 13
    vars        go to state 14


State 6

   35 funcion_main: MAIN • $@4 '(' ')' '{' declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 34 ($@4)

    $@4  go to state 15


State 7

    4 top_level_list: top_level_list funcion •

    $default  reduce using rule 4 (top_level_list)


State 8

    3 top_level_list: top_level_list declaracion • ';'

    ';'  shift, and go to state 16


State 9

    1 axioma: top_level_list funcion_main •

    $default  reduce using rule 1 (axioma)


State 10

    8 funcion: IDENTIF '(' • $@2 parametros ')' '{' declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 7 ($@2)

    $@2  go to state 17


State 11

    6 funcion: INTEGER IDENTIF • '(' $@1 parametros ')' '{' declaraciones_locales lista_sentencias '}'
   23 vars: IDENTIF •
   24     | IDENTIF • '=' cte
   25     | IDENTIF • '[' cte ']'

    '='  shift, and go to state 18
    '('  shift, and go to state 19
    '['  shift, and go to state 20

    $default  reduce using rule 23 (vars)


State 12

   33 funcion_main: INTEGER MAIN • $@3 '(' ')' '{' declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 32 ($@3)

    $@3  go to state 21


State 13

   17 declaracion: INTEGER lista_vars •

    $default  reduce using rule 17 (declaracion)


State 14

   19 lista_vars: vars •
   20           | vars • ',' lista_vars

    ','  shift, and go to state 22

    $default  reduce using rule 19 (lista_vars)


State 15

   35 funcion_main: MAIN $@4 • '(' ')' '{' declaraciones_locales lista_sentencias '}'

    '('  shift, and go to state 23


State 16

    3 top_level_list: top_level_list declaracion ';' •

    $default  reduce using rule 3 (top_level_list)


State 17

    8 funcion: IDENTIF '(' $@2 • parametros ')' '{' declaraciones_locales lista_sentencias '}'

    IDENTIF  shift, and go to state 24
    INTEGER  shift, and go to state 25

    $default  reduce using rule 9 (parametros)

    parametros        go to state 26
    lista_parametros  go to state 27


State 18

   24 vars: IDENTIF '=' • cte

    NUMBER  shift, and go to state 28
    '+'     shift, and go to state 29
    '-'     shift, and go to state 30

    cte  go to state 31


State 19

    6 funcion: INTEGER IDENTIF '(' • $@1 parametros ')' '{' declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 5 ($@1)

    $@1  go to state 32


State 20

   25 vars: IDENTIF '[' • cte ']'

    NUMBER  shift, and go to state 28
    '+'     shift, and go to state 29
    '-'     shift, and go to state 30

    cte  go to state 33


State 21

   33 funcion_main: INTEGER MAIN $@3 • '(' ')' '{' declaraciones_locales lista_sentencias '}'

    '('  shift, and go to state 34


State 22

   20 lista_vars: vars ',' • lista_vars

    IDENTIF  shift, and go to state 35

    lista_vars  go to state 36
    vars        go to state 14


State 23

   35 funcion_main: MAIN $@4 '(' • ')' '{' declaraciones_locales lista_sentencias '}'

    ')'  shift, and go to state 37


State 24

   12 lista_parametros: IDENTIF •

    $default  reduce using rule 12 (lista_parametros)


State 25

   11 lista_parametros: INTEGER • IDENTIF

    IDENTIF  shift, and go to state 38


State 26

    8 funcion: IDENTIF '(' $@2 parametros • ')' '{' declaraciones_locales lista_sentencias '}'

    ')'  shift, and go to state 39


State 27

   10 parametros: lista_parametros •
   13 lista_parametros: lista_parametros • ',' INTEGER IDENTIF
   14                 | lista_parametros • ',' IDENTIF

    ','  shift, and go to state 40

    $default  reduce using rule 10 (parametros)


State 28

   29 cte: NUMBER •

    $default  reduce using rule 29 (cte)


State 29

   30 cte: '+' • NUMBER

    NUMBER  shift, and go to state 41


State 30

   31 cte: '-' • NUMBER

    NUMBER  shift, and go to state 42


State 31

   24 vars: IDENTIF '=' cte •

    $default  reduce using rule 24 (vars)


State 32

    6 funcion: INTEGER IDENTIF '(' $@1 • parametros ')' '{' declaraciones_locales lista_sentencias '}'

    IDENTIF  shift, and go to state 24
    INTEGER  shift, and go to state 25

    $default  reduce using rule 9 (parametros)

    parametros        go to state 43
    lista_parametros  go to state 27


State 33

   25 vars: IDENTIF '[' cte • ']'

    ']'  shift, and go to state 44


State 34

   33 funcion_main: INTEGER MAIN $@3 '(' • ')' '{' declaraciones_locales lista_sentencias '}'

    ')'  shift, and go to state 45


State 35

   23 vars: IDENTIF •
   24     | IDENTIF • '=' cte
   25     | IDENTIF • '[' cte ']'

    '='  shift, and go to state 18
    '['  shift, and go to state 20

    $default  reduce using rule 23 (vars)


State 36

   20 lista_vars: vars ',' lista_vars •

    $default  reduce using rule 20 (lista_vars)


State 37

   35 funcion_main: MAIN $@4 '(' ')' • '{' declaraciones_locales lista_sentencias '}'

    '{'  shift, and go to state 46


State 38

   11 lista_parametros: INTEGER IDENTIF •

    $default  reduce using rule 11 (lista_parametros)


State 39

    8 funcion: IDENTIF '(' $@2 parametros ')' • '{' declaraciones_locales lista_sentencias '}'

    '{'  shift, and go to state 47


State 40

   13 lista_parametros: lista_parametros ',' • INTEGER IDENTIF
   14                 | lista_parametros ',' • IDENTIF

    IDENTIF  shift, and go to state 48
    INTEGER  shift, and go to state 49


State 41

   30 cte: '+' NUMBER •

    $default  reduce using rule 30 (cte)


State 42

   31 cte: '-' NUMBER •

    $default  reduce using rule 31 (cte)


State 43

    6 funcion: INTEGER IDENTIF '(' $@1 parametros • ')' '{' declaraciones_locales lista_sentencias '}'

    ')'  shift, and go to state 50


State 44

   25 vars: IDENTIF '[' cte ']' •

    $default  reduce using rule 25 (vars)


State 45

   33 funcion_main: INTEGER MAIN $@3 '(' ')' • '{' declaraciones_locales lista_sentencias '}'

    '{'  shift, and go to state 51


State 46

   35 funcion_main: MAIN $@4 '(' ')' '{' • declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 15 (declaraciones_locales)

    declaraciones_locales  go to state 52


State 47

    8 funcion: IDENTIF '(' $@2 parametros ')' '{' • declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 15 (declaraciones_locales)

    declaraciones_locales  go to state 53


State 48

   14 lista_parametros: lista_parametros ',' IDENTIF •

    $default  reduce using rule 14 (lista_parametros)


State 49

   13 lista_parametros: lista_parametros ',' INTEGER • IDENTIF

    IDENTIF  shift, and go to state 54


State 50

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' • '{' declaraciones_locales lista_sentencias '}'

    '{'  shift, and go to state 55


State 51

   33 funcion_main: INTEGER MAIN $@3 '(' ')' '{' • declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 15 (declaraciones_locales)

    declaraciones_locales  go to state 56


State 52

   16 declaraciones_locales: declaraciones_locales • declaracion_local ';'
   35 funcion_main: MAIN $@4 '(' ')' '{' declaraciones_locales • lista_sentencias '}'

    INTEGER  shift, and go to state 57

    $default  reduce using rule 36 (lista_sentencias)

    declaracion_local  go to state 58
    lista_sentencias   go to state 59


State 53

    8 funcion: IDENTIF '(' $@2 parametros ')' '{' declaraciones_locales • lista_sentencias '}'
   16 declaraciones_locales: declaraciones_locales • declaracion_local ';'

    INTEGER  shift, and go to state 57

    $default  reduce using rule 36 (lista_sentencias)

    declaracion_local  go to state 58
    lista_sentencias   go to state 60


State 54

   13 lista_parametros: lista_parametros ',' INTEGER IDENTIF •

    $default  reduce using rule 13 (lista_parametros)


State 55

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' '{' • declaraciones_locales lista_sentencias '}'

    $default  reduce using rule 15 (declaraciones_locales)

    declaraciones_locales  go to state 61


State 56

   16 declaraciones_locales: declaraciones_locales • declaracion_local ';'
   33 funcion_main: INTEGER MAIN $@3 '(' ')' '{' declaraciones_locales • lista_sentencias '}'

    INTEGER  shift, and go to state 57

    $default  reduce using rule 36 (lista_sentencias)

    declaracion_local  go to state 58
    lista_sentencias   go to state 62


State 57

   18 declaracion_local: INTEGER • lista_vars_locales

    IDENTIF  shift, and go to state 63

    lista_vars_locales  go to state 64
    vars_locales        go to state 65


State 58

   16 declaraciones_locales: declaraciones_locales declaracion_local • ';'

    ';'  shift, and go to state 66


State 59

   35 funcion_main: MAIN $@4 '(' ')' '{' declaraciones_locales lista_sentencias • '}'
   37 lista_sentencias: lista_sentencias • sentencia ';'
   38                 | lista_sentencias • sentencia_control

    IDENTIF  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    FOR      shift, and go to state 70
    SWITCH   shift, and go to state 71
    RETURN   shift, and go to state 72
    PRINTF   shift, and go to state 73
    PUTS     shift, and go to state 74
    '}'      shift, and go to state 75

    sentencia          go to state 76
    sentencia_control  go to state 77


State 60

    8 funcion: IDENTIF '(' $@2 parametros ')' '{' declaraciones_locales lista_sentencias • '}'
   37 lista_sentencias: lista_sentencias • sentencia ';'
   38                 | lista_sentencias • sentencia_control

    IDENTIF  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    FOR      shift, and go to state 70
    SWITCH   shift, and go to state 71
    RETURN   shift, and go to state 72
    PRINTF   shift, and go to state 73
    PUTS     shift, and go to state 74
    '}'      shift, and go to state 78

    sentencia          go to state 76
    sentencia_control  go to state 77


State 61

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' '{' declaraciones_locales • lista_sentencias '}'
   16 declaraciones_locales: declaraciones_locales • declaracion_local ';'

    INTEGER  shift, and go to state 57

    $default  reduce using rule 36 (lista_sentencias)

    declaracion_local  go to state 58
    lista_sentencias   go to state 79


State 62

   33 funcion_main: INTEGER MAIN $@3 '(' ')' '{' declaraciones_locales lista_sentencias • '}'
   37 lista_sentencias: lista_sentencias • sentencia ';'
   38                 | lista_sentencias • sentencia_control

    IDENTIF  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    FOR      shift, and go to state 70
    SWITCH   shift, and go to state 71
    RETURN   shift, and go to state 72
    PRINTF   shift, and go to state 73
    PUTS     shift, and go to state 74
    '}'      shift, and go to state 80

    sentencia          go to state 76
    sentencia_control  go to state 77


State 63

   26 vars_locales: IDENTIF •
   27             | IDENTIF • '=' cte
   28             | IDENTIF • '[' cte ']'

    '='  shift, and go to state 81
    '['  shift, and go to state 82

    $default  reduce using rule 26 (vars_locales)


State 64

   18 declaracion_local: INTEGER lista_vars_locales •

    $default  reduce using rule 18 (declaracion_local)


State 65

   21 lista_vars_locales: vars_locales •
   22                   | vars_locales • ',' lista_vars_locales

    ','  shift, and go to state 83

    $default  reduce using rule 21 (lista_vars_locales)


State 66

   16 declaraciones_locales: declaraciones_locales declaracion_local ';' •

    $default  reduce using rule 16 (declaraciones_locales)


State 67

   46 sentencia: IDENTIF • '=' expresion
   47          | IDENTIF • '[' expresion ']' '=' expresion
   53          | IDENTIF • '(' lista_expr ')'

    '='  shift, and go to state 84
    '('  shift, and go to state 85
    '['  shift, and go to state 86


State 68

   54 sentencia_control: WHILE • '(' expresion ')' '{' lista_sentencias '}'

    '('  shift, and go to state 87


State 69

   55 sentencia_control: IF • '(' expresion ')' '{' lista_sentencias '}'
   56                  | IF • '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'

    '('  shift, and go to state 88


State 70

   57 sentencia_control: FOR • '(' for_init ';' expresion ';' for_step ')' '{' lista_sentencias '}'

    '('  shift, and go to state 89


State 71

   58 sentencia_control: SWITCH • '(' expresion ')' '{' lista_cases '}'

    '('  shift, and go to state 90


State 72

   48 sentencia: RETURN • expresion

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 97
    termino    go to state 98
    operando   go to state 99


State 73

   50 sentencia: PRINTF • '(' STRING ')'
   51          | PRINTF • '(' STRING ',' lista_argumentos ')'
   52          | PRINTF • '(' expresion ')'

    '('  shift, and go to state 100


State 74

   49 sentencia: PUTS • '(' STRING ')'

    '('  shift, and go to state 101


State 75

   35 funcion_main: MAIN $@4 '(' ')' '{' declaraciones_locales lista_sentencias '}' •

    $default  reduce using rule 35 (funcion_main)


State 76

   37 lista_sentencias: lista_sentencias sentencia • ';'

    ';'  shift, and go to state 102


State 77

   38 lista_sentencias: lista_sentencias sentencia_control •

    $default  reduce using rule 38 (lista_sentencias)


State 78

    8 funcion: IDENTIF '(' $@2 parametros ')' '{' declaraciones_locales lista_sentencias '}' •

    $default  reduce using rule 8 (funcion)


State 79

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' '{' declaraciones_locales lista_sentencias • '}'
   37 lista_sentencias: lista_sentencias • sentencia ';'
   38                 | lista_sentencias • sentencia_control

    IDENTIF  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    FOR      shift, and go to state 70
    SWITCH   shift, and go to state 71
    RETURN   shift, and go to state 72
    PRINTF   shift, and go to state 73
    PUTS     shift, and go to state 74
    '}'      shift, and go to state 103

    sentencia          go to state 76
    sentencia_control  go to state 77


State 80

   33 funcion_main: INTEGER MAIN $@3 '(' ')' '{' declaraciones_locales lista_sentencias '}' •

    $default  reduce using rule 33 (funcion_main)


State 81

   27 vars_locales: IDENTIF '=' • cte

    NUMBER  shift, and go to state 28
    '+'     shift, and go to state 29
    '-'     shift, and go to state 30

    cte  go to state 104


State 82

   28 vars_locales: IDENTIF '[' • cte ']'

    NUMBER  shift, and go to state 28
    '+'     shift, and go to state 29
    '-'     shift, and go to state 30

    cte  go to state 105


State 83

   22 lista_vars_locales: vars_locales ',' • lista_vars_locales

    IDENTIF  shift, and go to state 63

    lista_vars_locales  go to state 106
    vars_locales        go to state 65


State 84

   46 sentencia: IDENTIF '=' • expresion

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 107
    termino    go to state 98
    operando   go to state 99


State 85

   53 sentencia: IDENTIF '(' • lista_expr ')'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    $default  reduce using rule 43 (lista_expr)

    lista_expr  go to state 108
    expresion   go to state 109
    termino     go to state 98
    operando    go to state 99


State 86

   47 sentencia: IDENTIF '[' • expresion ']' '=' expresion

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 110
    termino    go to state 98
    operando   go to state 99


State 87

   54 sentencia_control: WHILE '(' • expresion ')' '{' lista_sentencias '}'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 111
    termino    go to state 98
    operando   go to state 99


State 88

   55 sentencia_control: IF '(' • expresion ')' '{' lista_sentencias '}'
   56                  | IF '(' • expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 112
    termino    go to state 98
    operando   go to state 99


State 89

   57 sentencia_control: FOR '(' • for_init ';' expresion ';' for_step ')' '{' lista_sentencias '}'

    IDENTIF  shift, and go to state 113
    INTEGER  shift, and go to state 114

    declaracion  go to state 115
    for_init     go to state 116


State 90

   58 sentencia_control: SWITCH '(' • expresion ')' '{' lista_cases '}'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 117
    termino    go to state 98
    operando   go to state 99


State 91

   87 operando: NUMBER •

    $default  reduce using rule 87 (operando)


State 92

   86 operando: IDENTIF •
   88         | IDENTIF • '[' expresion ']'
   89         | IDENTIF • '(' lista_expr ')'

    '('  shift, and go to state 118
    '['  shift, and go to state 119

    $default  reduce using rule 86 (operando)


State 93

   82 expresion: NOT • expresion

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 120
    termino    go to state 98
    operando   go to state 99


State 94

   84 termino: '+' • operando

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    '('      shift, and go to state 96

    operando  go to state 121


State 95

   85 termino: '-' • operando

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    '('      shift, and go to state 96

    operando  go to state 122


State 96

   90 operando: '(' • expresion ')'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 123
    termino    go to state 98
    operando   go to state 99


State 97

   48 sentencia: RETURN expresion •
   69 expresion: expresion • '+' expresion
   70          | expresion • '-' expresion
   71          | expresion • '*' expresion
   72          | expresion • '/' expresion
   73          | expresion • '%' expresion
   74          | expresion • '>' expresion
   75          | expresion • '<' expresion
   76          | expresion • IGUAL expresion
   77          | expresion • DIFERENTE expresion
   78          | expresion • MAYOR_IGUAL expresion
   79          | expresion • MENOR_IGUAL expresion
   80          | expresion • AND expresion
   81          | expresion • OR expresion

    AND          shift, and go to state 124
    OR           shift, and go to state 125
    IGUAL        shift, and go to state 126
    DIFERENTE    shift, and go to state 127
    MENOR_IGUAL  shift, and go to state 128
    MAYOR_IGUAL  shift, and go to state 129
    '<'          shift, and go to state 130
    '>'          shift, and go to state 131
    '+'          shift, and go to state 132
    '-'          shift, and go to state 133
    '*'          shift, and go to state 134
    '/'          shift, and go to state 135
    '%'          shift, and go to state 136

    $default  reduce using rule 48 (sentencia)


State 98

   68 expresion: termino •

    $default  reduce using rule 68 (expresion)


State 99

   83 termino: operando •

    $default  reduce using rule 83 (termino)


State 100

   50 sentencia: PRINTF '(' • STRING ')'
   51          | PRINTF '(' • STRING ',' lista_argumentos ')'
   52          | PRINTF '(' • expresion ')'

    NUMBER   shift, and go to state 91
    IDENTIF  shift, and go to state 92
    STRING   shift, and go to state 137
    NOT      shift, and go to state 93
    '+'      shift, and go to state 94
    '-'      shift, and go to state 95
    '('      shift, and go to state 96

    expresion  go to state 138
    termino    go to state 98
    operando   go to state 99


State 101

   49 sentencia: PUTS '(' • STRING ')'

    STRING  shift, and go to state 139


State 102

   37 lista_sentencias: lista_sentencias sentencia ';' •

    $default  reduce using rule 37 (lista_sentencias)


State 103

    6 funcion: INTEGER IDENTIF '(' $@1 parametros ')' '{' declaraciones_locales lista_sentencias '}' •

    $default  reduce using rule 6 (funcion)


State 104

   27 vars_locales: IDENTIF '=' cte •

    $default  reduce using rule 27 (vars_locales)


State 105

   28 vars_locales: IDENTIF '[' cte • ']'

    ']'  shift, and go to state 140


State 106

   22 lista_vars_locales: vars_locales ',' lista_vars_locales •

    $default  reduce using rule 22 (lista_vars_locales)


State 107

   46 sentencia: IDENTIF '=' expresion •
   69 expresion: expresion • '+' expresion
   70          | expresion • '-' expresion
   71          | expresion • '*' expresion
   72          | expresion • '/' expresion
   73          | expresion • '%' expresion
   74          | expresion • '>' expresion
   75          | expresion • '<' expresion
   76          | expresion • IGUAL expresion
   77          | expresion • DIFERENTE expresion
   78          | expresion • MAYOR_IGUAL expresion
   79          | expresion • MENOR_IGUAL expresion
   80          | expresion • AND expresion
   81          | expresion • OR expresion

    AND          shift, and go to state 124
    OR           shift, and go to state 125
    IGUAL        shift, and go to state 126
    DIFERENTE    shift, and go to state 127
    MENOR_IGUAL  shift, and go to state 128
    MAYOR_IGUAL  shift, and go to state 129
    '<'          shift, and go to state 130
    '>'          shift, and go to state 131
    '+'          shift, and go to state 132
    '-'          shift, and go to state 133
    '*'          shift, and go to state 134
    '/'          shift, and go to state 135
    '%'          shift, and go to state 136

    $default  reduce using rule 46 (sentencia)


State 108

   53 sentencia: IDENTIF '(' lista_expr • ')'

    ')'  shift, and go to state 141


State 109

   44 lista_expr: expresion •
   45           | expresion • ',' lista_expr
   69 expresion: expresion • '+' expresion
   70          | expresion • '-' expresion
   71          | expresion • '*' expresion
   72          | expresion • '/' expresion
   73          | expresion • '%' expresion
   74          | expresion • '>' expresion
   75          | expresion • '<' expresion
   76          | expresion • IGUAL expresion
   77          | expresion • DIFERENTE expresion
   78          | expresion • MAYOR_IGUAL expresion
   79          | expresion • MENOR_IGUAL expresion
   80          | expresion • AND expresion
   81          | expresion • OR expresion

    AND          shift, and go to state 124
    OR           shift, and go to state 125
    IGUAL        shift, and go to state 126
    DIFERENTE    shift, and go to state 127
    MENOR_IGUAL  shift, and go to state 128
    MAYOR_IGUAL  shift, and go to state 129
    '<'          shift, and go to state 130
    '>'          shift, and go to state 131
    '+'          shift, and go to state 132
    '-'          shift, and go to state 133
    '*'          shift, and go to state 134
    '/'          shift, and go to state 135
    '%'          shift, and go to state 136
    ','          shift, and go to state 142

    $default  reduce using rule 44 (lista_expr)


State 110

   47 sentencia: IDENTIF '[' expresion • ']' '=' expresion
   69 expresion: expresion • '+' expresion
   70          | expresion • '-' expresion
   71          | expresion • '*' expresion
   72          | expresion • '/' expresion
   73          | expresion • '%' expresion
   74          | expresion • '>' expresion
   75          | expresion • '<' expresion
   76          | expresion • IGUAL expresion
   77          | expresion • DIFERENTE expresion
   78          | expresion • MAYOR_IGUAL expresion
   79          | expresion • MENOR_IGUAL expresion
   80          | expresion • AND expresion
   81          | expresion • OR expresion

    AND          shift, and go to state 124
    OR           shift, and go to state 125
    IGUAL        shift, and go to state 126
    DIFERENTE    shift, and go to state 127
    MENOR_IGUAL  shift, and go to state 128
    MAYOR_IGUAL  shift, and go to state 129
    '<'          shift, and go to state 130
    '>'          shift, and go to state 131
    '+'          shift, and go to state 132
    '-'          shift, and go to state 133
    '*'          shift, and go to state 134
    '/'          shift, and go to state 135
    '%'          shift, and go to state 136
    ']'          shift, and go to state 143


State 111
